--- a/app/src/main/res/drawable/signin_img_gradient.xml
+++ b/app/src/main/res/drawable/signin_img_gradient.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="90"
         android:endColor="#B3000000"
-        android:centerColor="#DB000000"
-        android:startColor="#F6000000"
+        android:centerColor="#E3000000"
+        android:startColor="#000000"
         android:type="linear" />
 </shape>
