--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,16 +7,42 @@
     android:background="@color/black"
     tools:context=".SignInActivity">
 
-    <ImageView
-        android:id="@+id/signin_bg"
-        android:layout_width="0dp"
+    <ViewFlipper
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@+id/signin_bg_gradient"
+        android:autoStart="true"
+        android:flipInterval="3000"
+        android:inAnimation="@anim/left_to_right"
+        android:outAnimation="@anim/right_to_left"
+        app:layout_constraintBottom_toTopOf="@+id/signin_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sample_image3" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/signin_slider_img1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/signin_slider_img2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/signin_slider_img3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/signin_slider_img4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+    </ViewFlipper>
 
     <ImageView
         android:id="@+id/signin_bg_gradient"
@@ -29,86 +55,96 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/signin_title1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Everyone"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/signin_ott_icon1"
-        app:layout_constraintStart_toStartOf="@+id/sigin_guideline" />
 
-    <TextView
-        android:id="@+id/signin_title2"
-        android:layout_width="wrap_content"
+    <View
+        android:id="@+id/view2"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="30dp"
+        android:alpha="0.7"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/signin_ott_rv"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Endless Entertainment for"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/signin_title1"
-        app:layout_constraintStart_toStartOf="@+id/sigin_guideline" />
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/signin_bg_gradient"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signin_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="#A4070E"
-        android:text="Continue with Google"
+        android:fontFamily="sans-serif-medium"
+        android:text="Continue  >   "
         android:textColor="#FFEDEE"
         android:textSize="14sp"
         app:cornerRadius="8dp"
-        app:icon="@drawable/ic_google"
-        app:iconGravity="start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:rippleColor="#C3292F" />
-
-    <ImageView
-        android:id="@+id/signin_ott_icon1"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="-3dp"
-        android:layout_marginBottom="12dp"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toTopOf="@+id/signin_button"
-        app:layout_constraintStart_toStartOf="@+id/sigin_guideline"
-        app:srcCompat="@drawable/ott_icons1" />
-
-    <ImageView
-        android:id="@+id/sigin_ott_icon2"
-        android:layout_width="200dp"
-        android:layout_height="0dp"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toBottomOf="@+id/signin_ott_icon1"
-        app:layout_constraintStart_toEndOf="@+id/signin_ott_icon1"
-        app:layout_constraintTop_toTopOf="@+id/signin_ott_icon1"
-        app:srcCompat="@drawable/ott_icons2" />
+        app:rippleColor="#E50914" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/sigin_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="24dp" />
+        app:layout_constraintGuide_begin="20dp" />
 
     <ImageView
-        android:id="@+id/signin_logo"
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="-7dp"
-        android:layout_marginBottom="18dp"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toTopOf="@+id/signin_title2"
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/signin_ott_rv"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_logo_name" />
+        app:srcCompat="@drawable/ic_allinone" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"
+        android:alpha="0.7"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/sigin_guideline"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="20dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:srcCompat="@drawable/ic_vision_full_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
