--- a/app/src/main/res/layout/home_slider_item.xml
+++ b/app/src/main/res/layout/home_slider_item.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sample_image8" />
+        app:srcCompat="@drawable/sample_img1" />
 
     <ImageView
         android:id="@+id/home_slider_image_gradient"
