--- a/app/src/main/res/layout/languages_item.xml
+++ b/app/src/main/res/layout/languages_item.xml
@@ -6,8 +6,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/languages_img_layout"
-        android:layout_width="169dp"
-        android:layout_height="95dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="2dp"
@@ -21,9 +21,11 @@
 
         <ImageView
             android:id="@+id/languages_img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/languages_hindi" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
