--- a/app/src/main/res/layout/movie_slide_item.xml
+++ b/app/src/main/res/layout/movie_slide_item.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="145dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="2dp"
-        android:background="@color/background"
+        app:cardBackgroundColor="@color/background"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,18 +24,20 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/popular_series_image"
+                android:id="@+id/movie_slide_image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/sample_image4" />
+                app:srcCompat="@drawable/sample_img1" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/popular_series_prime_icon_layout"
+                android:id="@+id/movie_slide_prime_icon_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -51,7 +53,7 @@
                     android:background="@drawable/prime_bg">
 
                     <ImageView
-                        android:id="@+id/popular_series_prime_icon"
+                        android:id="@+id/movie_slide_prime_icon"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
                         android:paddingStart="4dp"
@@ -67,6 +69,41 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/movie_slide_image_gradient"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:alpha="0.6"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/home_slider_img_gradient" />
+
+            <TextView
+                android:id="@+id/movie_slide_ratings_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="4.5"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <ImageView
+                android:id="@+id/movie_slide_star_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginTop="-2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="-2dp"
+                app:layout_constraintBottom_toBottomOf="@+id/movie_slide_ratings_tv"
+                app:layout_constraintEnd_toStartOf="@+id/movie_slide_ratings_tv"
+                app:layout_constraintTop_toTopOf="@+id/movie_slide_ratings_tv"
+                app:srcCompat="@drawable/ic_star" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
