--- a/app/src/main/res/layout/top10_item.xml
+++ b/app/src/main/res/layout/top10_item.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="180dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="4dp"
@@ -26,13 +26,15 @@
             <ImageView
                 android:id="@+id/top10_image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:layout_height="270dp"
+                android:layout_centerInParent="true"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/sample_image4" />
+                app:srcCompat="@drawable/sample_img1" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/top10_prime_icon_layout"
@@ -42,6 +44,7 @@
                 android:layout_marginEnd="8dp"
                 android:elevation="20dp"
                 app:cardCornerRadius="18dp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -87,6 +90,7 @@
                 android:alpha="0.8"
                 android:fontFamily="@font/gilroy_bold"
                 android:text="1"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="100sp"
                 app:layout_constraintBottom_toBottomOf="parent"
