--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,11 +5,11 @@
 
     <color name="theme">#E50914</color>
     <color name="background">#000000</color>
-    <color name="surface">#222222</color>
+    <color name="surface">#141414</color>
 
     <color name="logo">#F5F5F1</color>
     <color name="slider_active_indicator">#ffffff</color>
-    <color name="slider_inactive_indicator">#2E2E2E</color>
+    <color name="slider_inactive_indicator">#252525</color>
 
     <color name="theme_black">#221F1F</color>
     <color name="theme_white">#F5F5F1</color>
