--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,91 +4,180 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@color/background"
     tools:context=".AboutActivity">
 
-
-    <TextView
-        android:id="@+id/about_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="Log out"
-        android:textColor="@color/theme"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_email_tv" />
-
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/about_guideline"
+        android:id="@+id/about_guideline_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/about_profile_pic_card"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/about_guideline_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:cardCornerRadius="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="20dp" />
 
-        <ImageView
-            android:id="@+id/about_profile_pic"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            tools:srcCompat="@tools:sample/avatars" />
 
-    </androidx.cardview.widget.CardView>
+    <ImageView
+        android:id="@+id/about_back_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="-5dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/about_guideline_left"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_left_arrow"
+        app:tint="@color/text_title" />
 
     <TextView
-        android:id="@+id/about_name_title"
+        android:id="@+id/about_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="Name:"
+        android:layout_marginEnd="5dp"
+        android:fontFamily="@font/gilroy_regular"
+        android:text="Log out"
+        android:textColor="@color/theme"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/about_profile_pic_card" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/about_back_button"
+        app:layout_constraintEnd_toStartOf="@+id/about_guideline_right"
+        app:layout_constraintTop_toTopOf="@id/about_back_button" />
 
-    <TextView
-        android:id="@+id/about_name_tv"
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/about_profile_layout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-2dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Raj Maru"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline"
-        app:layout_constraintTop_toBottomOf="@id/about_name_title" />
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/surface"
+        app:cardElevation="2dp"
+        app:layout_constraintEnd_toStartOf="@+id/about_guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/about_guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/about_back_button"
+        app:strokeWidth="0dp">
 
-    <TextView
-        android:id="@+id/about_email_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="Email:"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline"
-        app:layout_constraintTop_toBottomOf="@id/about_name_tv" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/about_email_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-2dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Rajmaru0304@gmail.com"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline"
-        app:layout_constraintTop_toBottomOf="@id/about_email_title" />
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/about_profile_pic_card"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:cardCornerRadius="100dp"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                app:strokeWidth="0dp">
+
+                <ImageView
+                    android:id="@+id/about_profile_pic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    tools:srcCompat="@tools:sample/avatars" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@id/about_profile_barrier"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/about_name_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Name:"
+                    android:textColor="@color/text_subtitle"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/about_name_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="-3dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="Raj Maru"
+                    android:textColor="@color/text_title"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/about_email_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Email:"
+                    android:textColor="@color/text_subtitle"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/about_email_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="-3dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="Rajmaru0304@gmail.com"
+                    android:textColor="@color/text_title"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/about_profile_prime_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/subs_button_ripple"
+                    android:backgroundTint="@color/active_prime_layout"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:fontFamily="@font/gilroy_bold"
+                    android:gravity="center"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="Prime Member"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/about_profile_barrier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="top"
+                app:constraint_referenced_ids="about_profile_prime_layout" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
