--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,7 +5,12 @@
 
     <color name="theme">#E50914</color>
     <color name="background">#000000</color>
-    <color name="surface">#141414</color>
+    <color name="surface">#1A1A1A</color>
+    <color name="active_prime_layout">#BD060E</color>
+    <color name="inactive_prime_layout">#313131</color>
+
+    <color name="text_title">#FFFFFF</color>
+    <color name="text_subtitle">#E8E8E8</color>
 
     <color name="logo">#F5F5F1</color>
     <color name="slider_active_indicator">#ffffff</color>
