--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,11 @@
     <color name="theme">#CD000A</color>
     <color name="background">#F4F4F4</color>
     <color name="surface">#FFFFFF</color>
+    <color name="active_prime_layout">#DE040F</color>
+    <color name="inactive_prime_layout">#7D7D7D</color>
+
+    <color name="text_title">#000000</color>
+    <color name="text_subtitle">#1E1E1E</color>
 
     <color name="logo">#FF000000</color>
     <color name="slider_active_indicator">#CD000A</color>
