--- a/app/src/main/res/layout/languages_item.xml
+++ b/app/src/main/res/layout/languages_item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/background">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/languages_img_layout"
@@ -12,7 +13,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="2dp"
-        app:cardBackgroundColor="@color/logo"
+        app:cardBackgroundColor="@color/background"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +22,9 @@
 
         <ImageView
             android:id="@+id/languages_img"
-            android:layout_width="wrap_content"
-            android:layout_height="90dp"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/languages_hindi" />
+            android:layout_width="140dp"
+            android:layout_height="70dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/language_eng" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
